--- a/media/css/signup.css
+++ b/media/css/signup.css
@@ -2,6 +2,7 @@
 .signup_page .welcome_message {
 	margin: 0px;
 	padding: 10px 0px 10px 0px;
+	line-height: 1.1em;
 }
 .signup_page .single_dialog {
 	width: 630px;
