--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -1,6 +1,6 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n generic_fields friendly_data_formatting  %}
-{% block title %}GoodCloud Features - how GoodCloud can help your nonprofit.{% endblock %}
+{% block title %}GoodCloud - About us: who we are, why we're here.{% endblock %}
 {% block css %}
 {% css "/css/mycelium_elements.css" %}
 {{block.super}}
@@ -15,7 +15,7 @@
 <div class="page_header">About Us</div>
 
 <div id="side_nav" class="tabs">
-	<ul>
+	<ul class="nav_links">
 	 	<li><a href="#our_mission">Our Mission</a></li>
 	 	<li><a href="#the_team">Our Team</a></li>
  	</ul>
