--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -15,7 +15,8 @@
 
 <div class="tour_video">
 {# <iframe src="http://player.vimeo.com/video/VIDEO_ID" width="WIDTH" height="HEIGHT" frameborder="0"></iframe> #}
-<iframe src="http://player.vimeo.com/video/12650554?title=0&amp;byline=0&amp;portrait=0&amp;color=4f4f4f" width="660" height="400" frameborder="0"></iframe>
+{# <iframe src="http://player.vimeo.com/video/12650554?title=0&amp;byline=0&amp;portrait=0&amp;color=4f4f4f" width="660" height="400" frameborder="0"></iframe> #}
+<img src="{% media_url "images/video-coming-soon.png" %}"/>
 </div>
 
 <div class="clearfix"></div>
