cross-browser fixes

--- a/mycelium/apps/accounts/templates/accounts/signup.html
+++ b/mycelium/apps/accounts/templates/accounts/signup.html
@@ -16,6 +16,7 @@
 	<div class="organization_name">One-step easy.</div>
 	<div class="domain"></div>
 </div>
+<div class="clearfix"></div>
 <div class="single_dialog">
 <div class="welcome_message">Create a free account to see firsthand what GoodCloud can do for your organization.</div>
 
