--- a/mycelium/apps/marketing_site/templates/marketing_site/legal.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/legal.html
@@ -22,11 +22,11 @@
 	<div class="tab_content" id="user_agreement">
 		<div class="tab_title">User Agreement</div>
 
-		<p>This document (the “User Agreement”) is a legally binding agreement between you and GoodCloud LLC (“GoodCloud″) that governs your use of GoodCloud’s online services.</p>
+		<p>This document (the "User Agreement") is a legally binding agreement between you and GoodCloud LLC ("GoodCloud″) that governs your use of GoodCloud’s online services.</p>
 
 		<h3>Contract Formation</h3>
 
-		<p>By using the www.agoodcloud.com web site (“Service”), or any services of GoodCloud, you are agreeing to be bound by the following terms and conditions (“User Agreement”).
+		<p>By using the www.agoodcloud.com web site ("Service"), or any services of GoodCloud, you are agreeing to be bound by the following terms and conditions ("User Agreement").
 		Changes to the User Agreement</p>
 
 		<p>GoodCloud reserves the right to update and change the User Agreement from time to time at its sole discretion.  We will notify you about significant changes to the User Agreement by sending a notice to the email address specified in your GoodCloud primary account holder account or by placing a prominent notice on our site or blog.</p>
@@ -57,7 +57,7 @@
 		<ul>
 		<li>We reserve the right to modify or terminate the Service for any reason, without notice at any time.</li>
 		<li>We reserve the right to refuse service to anyone for any reason at any time.</li>
-		<li>Your use of the Service is at your sole risk. The Service is provided on an “as is” and “as available” basis without any warranty or condition, express, implied or statutory.</li>
+		<li>Your use of the Service is at your sole risk. The Service is provided on an "as is" and "as available" basis without any warranty or condition, express, implied or statutory.</li>
 		<li>GoodCloud does not warrant that the Service will be uninterrupted, timely, secure, or error-free.</li>
 		<li>GoodCloud does not warrant that the results that may be obtained from the use of the service will be accurate or reliable.</li>
 		<li>Technical support is only provided to paying account holders.</li>
