--- a/mycelium/apps/marketing_site/templates/marketing_site/normal_page.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/normal_page.html
@@ -1,5 +1,5 @@
 {% extends "marketing_site/base.html" %}
-{% load i18n cache cms_tags menu_tags %}
+{% load i18n cache  %}
 {% block title %}GoodCloud: {% page_attribute page_title %}{% endblock %}
 {% block page_content %}
 <div id="page_content">
