--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -321,12 +321,30 @@ input {
 	font-size: 24px;
 	color: #004486;
 }
+
+/* Footer fix */
+/*html, body {height: 100%;}
+#wrap {
+	min-height: 85%;
+	height: auto !important;
+	height: 100%;
+	margin: 0px auto -30px 0px; 
+}
+#footer, .push {
+	height: 30px; 
+}
+*/
 #footer {
+	position: relative;
+
+	clear:both;
+	padding: 20px 0px 10px 0px;
+
 	width: 100%;
 	display: block;
-	padding: 10px 0px;
+
 	text-align: center;
-	clear: both;
+
 	font-size: 14px;
 	color: #0060b9;
 }
@@ -350,11 +368,12 @@ social_links {
 	display: block;
 }
 #home_boxes {
-	position: absolute;
-	top: 450px;
+	display: block;
+	/*position: absolute;*/
 	overflow: visible;
 	padding: 0px;
 	margin: 0px;
+	padding-top: 366px;
 	width: 100%;
 }
 #home_boxes .home_box {
