--- a/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
@@ -1,4 +1,4 @@
-{% load i18n cache cms_tags menu_tags current_page  %}<div id="footer">
+{% load i18n cache current_page  %}<div id="footer">
 {# 	<div class="copyright">All content copyright GoodCloud, LLC, 2010-{% now "Y" %}</div> #}
 	{# <div class="footer_links">{% show_menu %}</div> #}
 	<a {% current_page_link_and_class request "marketing_site:about_us" "" %}	>About us</a> | 
