--- a/media/css/error_pages.css
+++ b/media/css/error_pages.css
@@ -30,7 +30,7 @@
 body {
 	background-color: #DDD;
 	height: 100%;
-	background: url("http://media.agoodcloud.com/images/marketing-background.png") repeat-x 0px 0px;
+	background: url("http://media.agoodcloud.com/images/marketing-background-plain-4.jpg") repeat-x 0px 0px;
 }
 body.502 .detail_text {
 	text-align: center;
