--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -24,7 +24,7 @@ Nonprofits told us that looking up a phone number, email or address is something
 	
 	<div class="feature full_contact">
 		<div class="title">Full contact information </div>
-		<div class="description identical_height_block">It’s all here - home and work addresses, work contacts, organizations and email. We’ve even got support for the next generation of contact info, like twitter. Never lose an address again.</div>
+		<div class="description identical_height_block">It’s all here - home and work addresses, organizations, employees, and email. We’ve even got support for the next generation of contact info, like twitter. You'll never lose an address again.</div>
 	</div>
 	</div>
 	<div class="row">
