--- a/media/css/contrib/1140/1140.css
+++ b/media/css/contrib/1140/1140.css
@@ -90,11 +90,11 @@ img {
 
 /* Smaller screens */
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 900px) {
 
 	body {
-	/*font-size: 1em;*/
-	/*line-height: 1.5em;*/
+	font-size: 0.8em;
+	line-height: 1.5em;
 	}
 	
 	}
