--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -16,7 +16,9 @@
 {% block javascript %}{{block.super}}
 {% js "/js/contrib/jquery.scrollTo-min.js"%}
 {% js "/js/contrib/jquery.toggleval.js"	%}
+{% js "/js/contrib/preloadCssImages.jQuery_v5.js"	%}
 {% js "/js/mycelium/marketing_site.js"	%}
+
 {% endblock %}
 {% block content %}
 	{% include "marketing_site/_top_nav.html" %}
