--- a/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
@@ -19,7 +19,7 @@
 <div class="the_details">No strings, no contracts, no hidden fees. Everything included.</div>
 
 <div class="subheading">Why $50?</div>
-When we started GoodCloud, we interviewed small nonprofits to see what the were paying for their software needs.  Then we took the smallest number we heard, and cut it in half.  We believe that small nonprofits should have access to great software at a price they can afford. 
+When we started GoodCloud, we interviewed small nonprofits to see what they were paying for their software needs.  Then we took the smallest number we heard, and cut it in half.  We believe that small nonprofits should have access to great software at a price they can afford. 
 
 <div class="subheading">Not sure if GoodCloud's a good fit for your organization?</div>
 The first 30 days are on us. Give it a try, and see for yourself.
