--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -24,7 +24,7 @@
 		<div class="button_title">Users</div>
 		<div class="button_description">Create, edit, and set access for user accounts</div>
 	</a>
-	<a href="#" class="mycelium_btn more_button account_button">
+	<a href="{% url accounts:manage_account %}" class="mycelium_btn more_button account_button">
 		<div class="button_title">Account</div>
 		<div class="button_description">Update billing and account information</div>
 	</a>
