--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -95,6 +95,15 @@ page_title {
 	display: block;
 	font-size: 30px;
 	margin-bottom: 8px;
+	
+	/*font-size: 34px;
+	margin: -40px 0px 20px 0px;
+	position: relative;
+	
+	left: 20%;
+	width: 60%;
+	text-align: center;
+	color: #DDD;*/
 }
 page_title img {
 	vertical-align: text-top;
