some initial ideas about groups

--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -65,10 +65,10 @@ $(function(){
 
 	
 <detail_tabs update_url="">
-	<a class="detail_tab" href="#">Conversations</a>
-	<a class="detail_tab" href="#">Activity</a>
+	{# <a class="detail_tab" href="#">Conversations</a> #}
+	{# <a class="detail_tab" href="#">Activity</a> #}
 	<a class="detail_tab current" href="#">People</a>
-	<a class="detail_tab" href="#">Donor</a>
+	{# <a class="detail_tab" href="#">Donor</a> #}
 </detail_tabs>
 <detail_tab_contents class="organizations_people">
 	<fragment name="detail_tab" action="replace">
