--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -95,9 +95,9 @@ $(function(){
 </div>
 
 <detail_tabs update_url="{% url people:tab_contents person.pk %}">
-	<a class="detail_tab current" href="#recent_activity">Recent Activity</a>
-	<a class="detail_tab" href="#conversations">Conversations</a>	
-	<a class="detail_tab" href="#volunteer">Volunteer</a>
+	{# <a class="detail_tab current" href="#recent_activity">Recent Activity</a> #}
+	{# <a class="detail_tab" href="#conversations">Conversations</a>	 #}
+	<a class="detail_tab current" href="#volunteer">Volunteer</a>
 	<a class="detail_tab" href="#donor">Donations</a>
 	<a class="detail_tab" href="#tags">Tags</a>
 </detail_tabs>
