--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -28,8 +28,12 @@
 	</logo>
 	<main_nav>{% spaceless %}
 		<a href="{% url people:search %}" {% if not section %}class="current"{% endif %}>People</a>
-		<a href="#">Volunteers</a>
-		<a href="#">Donors</a>
+		<a href="{% url groups:search %}" class="{% if section == "groups" %}current{% endif %}">Groups</a>
+		<a href="{% url reports:search %}" class="{% if section == "reports" %}current{% endif %}">Spreadsheets</a>
+		{# <a href="{% url people:new_person %}" >New Person</a> #}
+		
+		{# <a href="#">Volunteers</a> #}
+		{# <a href="#">Donors</a> #}
 		{# <a href="#">Fund</a> #}
 		{# <a href="{% url reports:search %}" class="{% if section == "reports" %}current{% endif %}" >Reports</a> #}
 		{# <a href="#">Communicate</a> #}
