--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -43,6 +43,7 @@
 
 		<div class="person tom">
 			<div class="tab_subheading">Tom Noble</div>
+			<div class="title">Co-Founder, COO, Chief Relationship Builder, Support Staff, Mail Clerk</div>
 			<div class="person_description">
 				<div class="bio_text">
 					<p>Tom has worked with nonprofit organizations of all sizes and functions in many different capacities:  as a managing director, mentor, project manager, volunteer, advisory board member, and consultant.  He’s still actively working with <a href="http://www.teachforamerica.org" target="_blank">Teach for America</a> after having served as a Corps Member and middle school teacher in Phoenix, AZ.</p>
@@ -54,6 +55,7 @@
 
 		<div class="person steven">
 			<div class="tab_subheading">Steven Skoczen</div>
+			<div class="title">Co-Founder, CEO, Director of Making Awesome Software, Support Staff, Coffee-Boy</div>
 			<div class="person_description">
 				<div class="bio_text">
 					<p>Steven started building web applications back in the 90's, and hasn't stopped since. He's run a <a href="http://www.quantumimagery.com" target="_blank">successful web development company</a>, and started <a href="http://www.sixlinks.org" target="_blank">SixLinks.org</a> and <a href="http://www.fluidtask.com" target="_blank">Fluidtask</a>.  Over the years, he's also thrown his development behind a number of other organizations on a pro-bono basis. </p>
