manage tags now forces save before taking action, and sorts sanely.

--- a/mycelium/apps/generic_tags/templates/generic_tags/_checklist_tag.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_checklist_tag.html
@@ -1,3 +1,3 @@
 <tag class="checkbox {% if checklist_tag.has_tag %}checked{% endif %}">
-	<input type="checkbox" class="checkbox_input" id="{{tag_set_id}}_{{checklist_tag.tag.pk}}" {% if checklist_tag.has_tag %}checked=checked{% endif %} remove_url="{% url generic_tags:remove_tag tag_set_id checklist_tag.tag.pk target.pk %}" add_url="{% url generic_tags:add_tag tag_set_id checklist_tag.tag.pk target.pk %}"/><label for="{{tag_set_id}}_{{checklist_tag.tag.pk}}"><name>{{checklist_tag.tag.name|title}}</name></label>
+	<input type="checkbox" class="checkbox_input" id="{{tag_set_id}}_{{checklist_tag.tag.pk}}" {% if checklist_tag.has_tag %}checked=checked{% endif %} remove_url="{% url generic_tags:remove_tag tag_set_id checklist_tag.tag.pk target.pk %}" add_url="{% url generic_tags:add_tag tag_set_id checklist_tag.tag.pk target.pk %}"/><label for="{{tag_set_id}}_{{checklist_tag.tag.pk}}"><name>{{checklist_tag.tag.name}}</name></label>
 </tag>
