--- a/mycelium/templates/404.html
+++ b/mycelium/templates/404.html
@@ -10,7 +10,7 @@
 	
 	<div id="error_message">
 	<div class="adorable_image">
-	<img src="{% media_url "images/icon-raincloud-400.png" %} />
+	<img src="{% media_url "images/icon-raincloud-400.png" %}" />
 	</div>
 	<div class="detail_box">
 	<h1>Oh Dear.  Looks like we don't have that page.</h1>
