--- a/mycelium/templates/500.html
+++ b/mycelium/templates/500.html
@@ -3,8 +3,11 @@
 <html lang="en">
 <head>
 	<title>500 Error - Unable to load the requested page!</title>
-	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
+	{% css "/css/main.css" %}
+	{% css "/css/error_pages.css" %}
+{# 	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
 	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/error_pages.css" type="text/css" media="screen" title="" charset="utf-8">
+ #}
 </head>
 <body>
 	
