added agree to terms checkbox, checked + fixed failing tests, hopefully improved cache response generation

--- a/media/css/signup.css
+++ b/media/css/signup.css
@@ -147,3 +147,25 @@
 	/*color: #000;*/
 	font-weight: bold;
 }
+#signup_form .form_section.terms {
+	display: block;
+	overflow: auto;
+	text-align: center;
+}
+#signup_form .checkbox_and_label {
+	display: block;
+	margin: 0px auto;
+	overflow: auto;
+	width: 230px;
+	text-align: center;
+	margin: 0px auto;
+}
+#signup_form .terms label, #signup_form .terms .agree_checkbox {
+	display: block;
+	float: left;
+	
+}
+#signup_form .terms label {
+	padding-top: 2px;
+	width: auto;
+}
