--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -817,6 +817,22 @@ social_links {
   	-khtml-box-shadow: 	1px 1px 2px rgba(0,0,0,0.35);
   	-webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.35);	*/
 }
+.blog_post { 
+	background: #FFF;
+	border-radius: 		4px;
+	-moz-border-radius: 4px;
+	font-size: 16px;
+	color: #333;
+	display: block;
+	width: 60%;
+	margin: 5px auto 30px auto;
+	padding: 20px;
+
+	box-shadow: 		1px 1px 2px rgba(0,0,0,0.35);
+  	-moz-box-shadow:	1px 1px 2px rgba(0,0,0,0.35);
+  	-khtml-box-shadow: 	1px 1px 2px rgba(0,0,0,0.35);
+  	-webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.35);	
+}
 .pricing .the_price {
 	font-size: 30px;
 	margin: 20px 0px 6px 0px;
