error page url, auto disable signup input

--- a/mycelium/apps/accounts/templates/accounts/signup.html
+++ b/mycelium/apps/accounts/templates/accounts/signup.html
@@ -48,7 +48,7 @@
 	</div>
 </div>
 
-<input type="submit" id="submit_button" class="mycelium_btn" value="Create your Account" />
+<input type="submit" id="submit_button" class="mycelium_btn auto_disable" value="Create your Account" disabled_text="Creating your Account..." />
 
 </form>
 </div>
