--- a/mycelium/apps/marketing_site/templates/marketing_site/praise.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/praise.html
@@ -15,25 +15,26 @@
 <div class="page_header">Love for the <img class="the_cloud" src="{% media_url "images/goodcloud-logo-60-with-shadow.png" %}" /></div>
 
 <div class="testimonial style_3">
-	<quote>I have sliced bread many times, and eaten sliced bread on occasion after occasion. GoodCloud is easily better than both.</quote>
-	<div class="person">-William M. Tester</div>
-	<div class="organization"><a href="#" target="_blank">The Organization for Really Long Names</a></div>
+	<div class="quote">Very Easy! I love how when I start typing the name it comes up mid-word. It reads my mind!</div>
+	<div class="person">-Rachel L.</div>
+	<div class="organization"><a href="http://www.outsidethelens.org/" target="_blank">Outside the Lens</a></div>
 </div>
 
 <div class="testimonial style_1">
-	<quote>SO Easy!</quote>
-	<div class="person">-Sara Tester</div>
-	<div class="organization"><a href="#" target="_blank">Awesome Nonprofit</a></div>
+	<div class="quote">Too easy. Is this for real?!</div>
+	<div class="person">-Amanda A.</div>
+	<div class="organization"><a href="http://stgerardhouse.com/" target="_blank">St. Gerard House</a></div>
 </div>
 
 
 <div class="clearfix right_bubble_clear"></div>
 
 <div class="testimonial style_2">
-	<quote>GoodCloud saves us hours a day over what we were doing before.</quote>
-	<div class="person">-Samantha J. Example</div>
-	<div class="organization"><a href="#" target="_blank">Association for Awesome</a></div>
+	<div class="quote">Extremely easy to understand. Extremely quick. Extremely flexible.</div>
+	<div class="person">-Nathaniel H.</div>
+	<div class="organization"><a href="http://congoleadershipinitiative.wordpress.com/" target="_blank">Congo Leadership Initiative</a></div>
 </div>
+
 
 
 <a href="{% url accounts:signup %}" class="page_action">Discover what you love with a Free Trial!</a>
