--- a/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
@@ -12,6 +12,6 @@
 	<a {% current_page_link_and_class request "marketing_site:pricing" "" %} >Pricing</a>
 	<a {% current_page_link_and_class request "accounts:signup" "" %} >Free Trial</a>
 	
-{% endspaceless %}</div
+{% endspaceless %}</div>
 </div>
 {% endblock %}
