--- a/media/css/generic_fields.css
+++ b/media/css/generic_fields.css
@@ -24,7 +24,7 @@
 .generic_field_label {
 	position: absolute;
 	top: 100%;
-	font-size: 14px;
+	font-size: 14px14px;
 	text-align: center;
 	color: #AAA;
 	clear: none;
@@ -46,6 +46,7 @@
 	margin: 0px;
 	border-width: 0px 0px 1px 0px;
 	padding-bottom: 0px;
+	background-color: transparent;
 }
 .edit_mode_on input:focus {
 	outline-style:none;
@@ -69,4 +70,15 @@
 	display: block;
 	float: left;
 	padding-left: 15px;
+}
+.generic_editable_field_table_row .label_col, .generic_editable_field_table_row .label_col label  {
+	font-size: 20px;
+	color: #555;
+}
+.generic_editable_field_table_row .label_col, .generic_editable_field_table_row .field_col  {
+	padding: 6px;
+}
+.generic_editable_field_table_row .field_col .view_field {
+	font-size: 20px;
+	padding: 0px 0px 1px 1px;
 }
