--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -8,15 +8,14 @@
 {% block page_content %}
 <div class="more_buttons">
 	<div class="more_row">
-	<a href="{% url import:list %}" class="mycelium_btn more_button data_import_btn">
-		<div class="button_title">Data Import</div>
-		<div class="button_description">Import records from other systems into GoodCloud</div>
-	</a>
 	<a href="{% url reports:search %}" class="mycelium_btn more_button reports_btn">
 		<div class="button_title">Spreadsheets</div>
 		<div class="button_description">Create and download custom spreadsheets</div>
 	</a>
-
+	<a href="{% url accounts:my_account %}" class="mycelium_btn more_button my_account_button">
+		<div class="button_title">My Account</div>
+		<div class="button_description">Update username, password, and contact info</div>
+	</a>
 	</div>
 	{% if request.useraccount.is_admin %}
 	<div class="more_row">
@@ -25,21 +24,27 @@
 		<div class="button_description">Create, edit, and set access for user accounts</div>
 	</a>
 	<a href="{% url accounts:manage_account %}" class="mycelium_btn more_button account_button">
-		<div class="button_title">Account</div>
+		<div class="button_title">GoodCloud Account</div>
 		<div class="button_description">Update billing and account information</div>
 	</a>
 	</div>
 	{% endif %}
 	<div class="more_row">
-	<a href="{% url logo_maker:list_logos %}" class="mycelium_btn more_button logo_button">
-		<div class="button_title">Logos</div>
-		<div class="button_description">Download resized versions of your logo for other sites</div>
+	<a href="{% url import:list %}" class="mycelium_btn more_button data_import_btn">
+		<div class="button_title">Data Import</div>
+		<div class="button_description">Import records from other systems into GoodCloud</div>
 	</a>
 	<a href="{% url generic_tags:manage %}" class="mycelium_btn more_button tag_button">
 		<div class="button_title">Tags</div>
 		<div class="button_description">Manage Tags and Tag Categories</div>
 	</a>
-
 	</div>
+<!--	<div class="more_row">
+		<a href="{% url logo_maker:list_logos %}" class="mycelium_btn more_button logo_button">
+			<div class="button_title">Logos</div>
+			<div class="button_description">Download resized versions of your logo for other sites</div>
+		</a>
+	</div>
+-->
 </div>
 {% endblock %}
