--- a/mycelium/apps/groups/templates/groups/_group_member_count.html
+++ b/mycelium/apps/groups/templates/groups/_group_member_count.html
@@ -1,1 +1,1 @@
-{% load humanize %}<div class="member_meta"><span class="count">{{group.members.count|intcomma}}</span> people in this group:</div>
+{% load humanize %}<div class="member_meta"><span class="count">{{members.count|intcomma}}</span> people in this group:</div>
