tweaks to dashboard

--- a/mycelium/apps/dashboard/templates/dashboard/dashboard.html
+++ b/mycelium/apps/dashboard/templates/dashboard/dashboard.html
@@ -19,34 +19,34 @@
 	</div>
 {% endif %}
 
-<table class="dashboard_panel">
+<table class="dashboard_panel_table">
 <tr>
 {% if not request.account.completed_goodcloud_quests %}
 	<td class="left_col">
 		<column_header>GoodCloud Challenges</column_header>
 		<challenge>
-			<title><a href="#">Import your contacts.</a></title>
-			<description>Got a system or spreadsheet that you currently keep your contacts in?  Get that contact list to .xls or .csv format and let’s import that thing to get you rolling!</description>
+			<title_text><a href="#">Import your contacts.</a></title_text>
+			<description>Got a system or spreadsheet that you currently keep your contacts in?  Get that contact list to an Excel or .csv file and let’s import that thing to get you rolling!</description>
 		</challenge>
 
 		<challenge>
-			<title><a href="#">Set up your tags.</a></title>
+			<title_text><a href="#">Set up your tags.</a></title_text>
 			<description>Create the tags that make the most sense for the way you categorize your volunteers, donors, and mission-based contacts. </description>
 		</challenge>
 		<challenge>
-			<title><a href="#">Add your board.</a></title>
+			<title_text><a href="#">Add your board.</a></title_text>
 			<description>Make a tag for Board Members.  Then, make a new group for all the people with a Board Members tag.</description>
 		</challenge>
 		<challenge>
-			<title><a href="#">Share the love - Get everyone else onboard!</a></title>
+			<title_text><a href="#">Share the love - Get everyone else onboard!</a></title_text>
 			<description>Make an account for one other staff member. If you’re the only staff member, send us a note, and we’ll check this one off for you.</description>
 		</challenge>
 		<challenge>
-			<title><a href="#">Download a spreadsheet.</a></title>
+			<title_text><a href="#">Download a spreadsheet.</a></title_text>
 			<description>Have your spreadsheet include all your board members with their first and last names, email addresses, and phone numbers.</description>
 		</challenge>
 		<challenge>
-			<title><a href="#">Say Hello!</a></title>
+			<title_text><a href="#">Say Hello!</a></title_text>
 			<description>We get to know our clients and want to make sure that using GoodCloud is easy like Sunday morning for you.  Click that blue “Feedback & Support” button in the corner, and submit a message with any questions you have, more info about you and your organization, or just a hello!</description>
 		</challenge>
 
